Bug 551165 - Unable to compile MIPS nanojit backend (r=edwsmith+)